--- a/gulp/PLUGINS FOR GULP/autoprefix/css/style.css
+++ b/gulp/PLUGINS FOR GULP/autoprefix/css/style.css
@@ -12,7 +12,8 @@
 }
 
 body{
-	background: linear-gradient(45deg, #ff0, #f00);
+	background-color: #eee;
+	display: flex;
 }
 
 #wrapper {
@@ -20,7 +21,7 @@ body{
   min-height: 100%;
   overflow: hidden;
   margin: 0px auto;
-  background-color: #eee;
+  background: linear-gradient(#1ff, #ff0);
 }
 #wrapper header {
   min-height: 42px;
